--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- open graph  meta-->
     <meta property="og:title" content="Proyecto final. Front end Academy - 2022. Ticmas: Currículum vitae"/> 
     <meta property="og:description" content="Página del proyecto final del curso 'Primeros pasos al Front End'">
-    <meta property="og:url" content=""> 
+    <meta property="og:url" content="https://github.com/dcstlln/Ticmas_front_end/blob/R1/index.html"> 
     <meta property="og:type" content="CV"> 
 <style>
   /* ------------------------------------------------------------------------------ajuste a celular de algunos elementos*/
