--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- compatible con edge -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link   rel="stylesheet" type="text/css" href="estilos/estilo_cv2.css" />
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,400;0,700;1,100;1,200;1,300;1,400;1,500;1,400;1,700&display=swap" rel="stylesheet"> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,400;0,700;1,100;1,200;1,300;1,400;1,500;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link   rel="stylesheet" type="text/css" href="estilos/estilo_cv.css" />
+    <link rel="stylesheet"   href="https://fonts.googleapis.com/css?family=Roboto Mono">
+  
     <title>Proyecto final. Front end Academy - 2022. Ticmas: Currículum vitae. Daniel Castellano F.</title>
     <link rel="icon" type="image/x-icon" href="imagenes/fav.png"/>
     <!-- open graph  meta-->
@@ -103,7 +103,7 @@
 <br>
 
 <!--secc académica--> 
-<section id="sección_informacion_académica"></section>
+<section id="sección_informacion_académica">
 <div class="center">
     <h2 class="left2" >Formación académica</h2>
     <br>
@@ -159,7 +159,7 @@
 <br>
 
 <!--secc experiencia laboral--> 
-<section id="sección_informacion_experiencia"></section>
+<section id="sección_informacion_experiencia">
 <div class="center">
     <h2 class="left2" >Experiencia laboral </h2>
     <br>
@@ -192,7 +192,7 @@
 <br>
 
 <!--secc intereses--> 
-<section id="sección_informacion_habilidades"></section>
+<section id="sección_informacion_habilidades">
 <div class="center">
     <h2 class="left2" >Habilidades e idiomas </h2>
     <br>
@@ -235,7 +235,7 @@
 <br>
 
 <!--secc intereses--> 
-<section id="sección_informacion_intereses"></section>
+<section id="sección_informacion_intereses">
 <div class="center">
     <h2 class="left2" >Intereses personales</h2>
     <br>
@@ -257,7 +257,7 @@
 <br>
 
 <!--secc contacto--> 
-<section id="sección_informacion_contacto"></section>
+<section id="sección_informacion_contacto">
 <div class="center">
     <h2 class="left2" >Contacto</h2>
     <br>
@@ -274,7 +274,7 @@
 </section>
 
 
-<section id="sección_info_página" ></section>
+<section id="sección_info_página" >
     <div class="info_pagina" id="infopag">
         <br id="goinfo"><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
         <div class="col-container">
@@ -298,7 +298,7 @@
     <!-- espacio para el final de página -->
 <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
-<section id="sección_footer"></section>
+<section id="sección_footer">
 <footer>
     <table id="acerca_de">
         <tr>
